@@ -48,7 +48,7 @@ GQuark g_markup_error_quark ();
 typedef enum
 {
   /* Hmm, can't think of any at the moment */
-  G_MARKUP_FOO = 1 << 0
+  G_MARKUP_DO_NOT_USE_THIS_UNSUPPORTED_FLAG = 1 << 0
   
 } GMarkupParseFlags;
 
